# nulo-chain

./: Cargo.toml  README.md  zombienet-omni-node.toml  zombienet.toml
.github/actions/ubuntu-dependencies/: action.yml
.github/tests/: zombienet-smoke-test.zndsl
.github/workflows/: ci.yml  release.yml  test-zombienet.yml
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
pallets/template/src/: lib.rs  tests.rs
runtime/: Cargo.toml  build.rs
runtime/src/: apis.rs  genesis_config_presets.rs  lib.rs
runtime/src/configs/: mod.rs  xcm_config.rs
runtime/src/weights/: block_weights.rs  extrinsic_weights.rs  paritydb_weights.rs  rocksdb_weights.rs
